--- a/src/components/Button/styles.module.css
+++ b/src/components/Button/styles.module.css
@@ -27,8 +27,10 @@
   border: thin solid #9a6e41;
   color: #000;
   border-radius: 5px;
-  padding: 10px 30px;
+  padding: 10px 15px;
   display: flex;
   justify-content: center;
   align-items: center;
+  width: 100%;
+  margin: 0 10px;
 }
