--- a/src/components/Input/styles.module.css
+++ b/src/components/Input/styles.module.css
@@ -6,8 +6,10 @@
   outline: none;
   padding: 10px 10px;
   margin: 10px 0;
+  border-radius: 5px;
 }
 
 .label {
   cursor: pointer;
+  font-size: 0.8rem;
 }
