--- a/src/components/Login/styles.module.css
+++ b/src/components/Login/styles.module.css
@@ -54,15 +54,18 @@
   height: 100%;
 }
 
+.loginContent {
+  width: 100%;
+}
+
 .formContent {
   margin: 30px 0;
 }
 
 .formContent .forgotPassword {
-  text-align: end;
   font-size: 0.8rem;
   opacity: 0.8;
-  display: block;
+  float: right;
 }
 
 .formContent .forgotPassword:hover {
