--- a/src/components/Layout/Auth/styles.module.css
+++ b/src/components/Layout/Auth/styles.module.css
@@ -26,7 +26,22 @@
   opacity: 1;
   max-width: 1200px;
   width: 100%;
+  height: 800px;
   background-color: white;
   display: flex;
   color: #000;
+}
+
+.exitIcon {
+  width: 15px;
+  right: 15px;
+  position: absolute;
+  top: 10px;
+  cursor: pointer;
+  opacity: 0.8;
+  transition: all 0.3s;
+}
+
+.exitIcon:hover {
+  opacity: 1;
 }
