--- a/src/components/Layout/Home/styles.module.css
+++ b/src/components/Layout/Home/styles.module.css
@@ -3,8 +3,5 @@
   height: 100vh;
   background-size: cover;
   padding-top: 70px;
-  width: 1200px;
-  width: 100%;
-  margin: auto;
-  overflow-y: scroll;
+  overflow-y: overlay;
 }
