--- a/src/index.css
+++ b/src/index.css
@@ -54,11 +54,11 @@ button {
   border: none;
 }
 
-.sectionContent {
+/* .sectionContent {
   max-width: 1200px;
   width: 100%;
   margin: 0 auto;
-}
+} */
 
 img {
   width: 100%;
