--- a/src/components/Layout/Auth/styles.module.css
+++ b/src/components/Layout/Auth/styles.module.css
@@ -10,7 +10,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  overflow-y: scroll;
+  overflow-y: overlay;
 }
 
 .slide {
