--- a/src/components/Header/styles.module.css
+++ b/src/components/Header/styles.module.css
@@ -35,7 +35,7 @@
 }
 
 .navList::after {
-  content: '';
+  content: "";
   border: thin solid #fff;
   height: 30px;
   margin: 0 20px;
@@ -43,12 +43,70 @@
 
 .cartIcon,
 .searchIcon,
-.loginIcon {
+.loginIcon,
+.settingIcon {
   height: 20px;
   filter: invert(1);
 }
 
-.searchIcon,
-.loginIcon {
+.menuIcon {
   margin-left: 20px;
+}
+
+.setting {
+  position: relative;
+  margin-left: 20px;
+}
+
+.setting .settingMenu {
+  display: none;
+  position: absolute;
+  /* height: 30px; */
+  width: 150px;
+  right: -16px;
+  top: 35px;
+  border-radius: 5px;
+  background-color: #ffffff;
+  color: #926045;
+}
+
+.settingIcon {
+  filter: unset;
+}
+
+.settingTab {
+  color: #926045;
+  cursor: pointer;
+}
+
+.setting .settingMenu::before {
+  content: "";
+  border: 24px solid;
+  position: absolute;
+  right: 2px;
+  top: -35px;
+  border-color: transparent transparent #ffffff transparent;
+}
+
+.setting:hover .settingMenu {
+  display: block;
+}
+
+.settingItem {
+  display: flex;
+  padding: 10px 15px;
+  align-items: center;
+  border-top: thin solid #ddd;
+}
+
+.settingItem:first-child {
+  border-top: unset;
+}
+
+.settingItem img {
+  margin-right: 10px;
+}
+
+.settingIcon {
+  width: unset;
 }
