--- a/src/components/Button/styles.module.css
+++ b/src/components/Button/styles.module.css
@@ -5,6 +5,7 @@
   transition: all 0.5s;
   text-transform: uppercase;
   font-weight: 600;
+  border-radius: 5px;
 }
 
 .btn:hover {
@@ -33,4 +34,15 @@
   align-items: center;
   width: 100%;
   margin: 0 10px;
+}
+
+.btnAddItem {
+  border: thin solid #9a6e41;
+  color: #9a6e41;
+  margin: 20px 0;
+}
+
+.btnAddItem:hover {
+  color: #fff;
+  background-color: #9a6e41 !important;
 }
